--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
-		    <groupId>jetty</groupId>
-		    <artifactId>servlet-api</artifactId>
-		    <version>2.5-6.0.2</version>
+			<groupId>jetty</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5-6.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -22,6 +22,18 @@
 	</dependencies>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>1.1.1</version>
+				<configuration>
+					<appName>adondevamos</appName>
+					<processTypes>
+						<web>java $JAVA_OPTS -jar target/dependency/jetty-runner.jar
+							--port $PORT target/*.war</web>
+					</processTypes>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
