--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
 						<web>java $JAVA_OPTS -jar target/dependency/jetty-runner.jar
 							--port $PORT target/*.war</web>
 					</processTypes>
+					<configVars>
+						<HEROKU_API_KEY>SomeValue</HEROKU_API_KEY>
+					</configVars>
 				</configuration>
 			</plugin>
 			<plugin>
