--- a/pom.xml
+++ b/pom.xml
@@ -21,39 +21,29 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>com.heroku.sdk</groupId>
-				<artifactId>heroku-maven-plugin</artifactId>
-				<version>1.1.1</version>
-				<configuration>
-					<appName>adondevamos</appName>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.3</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.eclipse.jetty</groupId>
-									<artifactId>jetty-runner</artifactId>
-									<version>9.3.3.v20150827</version>
-									<destFileName>jetty-runner.jar</destFileName>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
+	  <plugins>
+	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-dependency-plugin</artifactId>
+	      <version>2.3</version>
+	      <executions>
+	        <execution>
+	          <phase>package</phase>
+	          <goals><goal>copy</goal></goals>
+	          <configuration>
+	            <artifactItems>
+	              <artifactItem>
+	                <groupId>org.eclipse.jetty</groupId>
+	                <artifactId>jetty-runner</artifactId>
+	                <version>9.3.3.v20150827</version>
+	                <destFileName>jetty-runner.jar</destFileName>
+	              </artifactItem>
+	            </artifactItems>
+	          </configuration>
+	        </execution>
+	       </executions>
+	    </plugin>
+	  </plugins>
 		<finalName>desapp-grupoe-backend</finalName>
 	</build>
 </project>
